fix: replace getFirst() with get(0) for Java 17 compatibility